plugins/xpath/xpath-lang/testData/xpath2/highlighting/types/dynamicContext1.xpath2
(1 to 30)[. = <error descr="Expected type 'xs:integer', got 'xs:string'">'x'</error>]